# AI-Python-projects

./: README.md
AI_agent_research/: .gitignore  README.md  main.py
AI_agent_voice_assistant/: README.md  api.py
AI_data_analyst/: .env.example  README.md  SPEC.md
AI_document_processor/: .env.example  README.md  requirements.txt
AI_voice_assistant/: .gitignore  README.md
ChatGPT_Apps_sdk/: rav.yaml
Docker_deploy_AI_agent/: Dockerfile  compose.yaml  static.Dockerfile
Python_coding_agent/: README.md  call_function.py  main.py  secure_implementation_guide.md  security_analysis_and_plan.md  tests.py
RAG_production_app/: README.md  main.py  pyproject.toml
Reddit_scraping_pipeline/: .env.sample  README.md  compose.yaml  requirements.txt
Social_media_scraper/: README.md  main.py  pyproject.toml  social_media.html  social_media_posts.csv
ai_agent_research/: research_output.txt  tools.py
ai_agent_voice_assistant/: README.md  api.py
ai_coding_mentor/: .gitignore  README.md
ai_data_analyst/: .ai_data_analyst.pkl  .gitignore  SPEC.md  main.py  pyproject.toml  sample_data.csv
ai_data_analyst/src/: analyzer.py  loader.py
ai_data_analyst/src/ai_data_analyst.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
ai_scraper_agent/: README.md  main.py  requirements.txt
chatgpt_apps_sdk/: README.md  requirements.txt
custom_mcp_server/: .gitignore  README.md  main.py  pyproject.toml
deployed_agent/: .gitignore  agent.py  main.py  requirements.txt
langflow_web_agent/: .env.sample  .gitignore  README.md  main.py  pyproject.toml  web_operations.py
(+64 files in other folders)
